Final changes to week1 slides

--- a/week1.html
+++ b/week1.html
@@ -29,12 +29,15 @@
                     <textarea data-template>
 						## Why Python?
 
+						* General-purpose
+						* Easy to read and easy to understand
 						* One of the most popular programming languages ([Source](https://towardsdatascience.com/top-10-in-demand-programming-languages-to-learn-in-2020-4462eb7d8d3e)):
 							* PYPL: Most popular language, based on Google searches
 							* GitHub: 2nd most popular language across repository contributions
 							* StackOverflow: 2nd most popular programming language, 4th most popular technology
 						* Powerful toolset for statistical data analysis and machine learning
 							* Packages: NumPy, Pandas, SciPy, Scikit-Learn, and many more
+						* Learning Python programming fundamentals can help you learn other languages
 
                     </textarea>
 				</section>
@@ -52,7 +55,7 @@
 				  </section>
 				  <section data-markdown>
 					<textarea data-template>
-					  ### Anaconda
+					  ### Python
 					  Version 3.7.x is required for this class.
 
 					  To check your version, run the following in your command line app:
