Created week2, added github and python basics

--- a/week1.html
+++ b/week1.html
@@ -45,7 +45,7 @@
 					<textarea data-template>
 					  ## Required Technologies
 					  <div class="container">
-						<div class="col"><img src="reveal.js-master/img/Anaconda_Logo.png" /></div>
+						<div class="col"><img src="img/Anaconda_Logo.png" /></div>
 						<div class="col">
 							<h3><a href="https://www.anaconda.com/distribution/">Anaconda</a></h3>
 							<p>Free distribution of Python and R, includes package management for data science packages (software distributions)</p>
@@ -70,11 +70,11 @@
 					  ## Required Technologies
 					  <div class="container">
 						<div class="col">
-							<p><img src="reveal.js-master/img/GitHub-logo.png" width=200px/></p>
+							<p><img src="img/GitHub-logo.png" width=200px/></p>
 							<p>GitHub</p>
 						</div>
 						<div class="col">
-							<p><img src="reveal.js-master/img/Atom-logo.png" width=200px/></p>
+							<p><img src="img/Atom-logo.png" width=200px/></p>
 							<p>Atom or any text editor of your choice</p>
 						</div>
 					  </div>
