Added week2 lecture notes

--- a/week2.html
+++ b/week2.html
@@ -20,7 +20,7 @@
 				<section data-markdown>
 					<textarea data-template>
 					  ## Week 2:
-                        GitHub | Python Basics
+                        GitHub | Python Basics | Data Types and Logic Control
 					</textarea>
 				  </section>
                 <section >
@@ -55,6 +55,24 @@
                             <li>integer</li>
                             <li>boolean</li>
                         </ul></div>
+                        <div class="col">
+							<h3>Other standard data types</h3>
+                            <ul>
+                                <li>Lists</li>
+								<li>Dictionaries</li>
+								<li>Sets</li>
+								<li>Tuples</li>
+                            </ul>
+						</div>
+
+                        </div>
+					</textarea>
+				  </section>
+				  <section data-markdown>
+					<textarea data-template>
+					  ## Arithmetic operators and Boolean conditionals
+					  <div class="container">
+
 						<div class="col">
 							<h3>Arithmetic Operators</h3>
                             <ul>
@@ -77,20 +95,25 @@
                                 <li>>=</li>
                                 <li><=</li>
                             </ul>
-                        </div>
-                        <div class="col">
-							<h3>Other standard data types</h3>
-                            <ul>
-                                <li>Lists</li>
-                                <li>Dictionaries</li>
-                            </ul>
 						</div>
+						<div class="col">
+							<h3>Boolean Conditions</h3>
+							<code>
+							if condition:
+								action
+							elif:
+								action
+							else:
+								action
+							</code>
+
 
                         </div>
 
+                        </div>
 
 					</textarea>
-				  </section>
+                  </section>
 
 			</div>
 		</div>
