--- a/week2.html
+++ b/week2.html
@@ -1,37 +1,39 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Week 2: Python Basics</title>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<link rel="stylesheet" href="reveal.js-master/dist/reset.css">
-		<link rel="stylesheet" href="reveal.js-master/dist/reveal.css">
-		<link rel="stylesheet" href="reveal.js-master/dist/theme/simple.css" id="theme">
+	<title>Week 2: Python Basics</title>
 
-		<!-- Theme used for syntax highlighted code -->
-		<link rel="stylesheet" href="reveal.js-master/plugin/highlight/monokai.css" id="highlight-theme">
+	<link rel="stylesheet" href="reveal.js-master/dist/reset.css">
+	<link rel="stylesheet" href="reveal.js-master/dist/reveal.css">
+	<link rel="stylesheet" href="reveal.js-master/dist/theme/simple.css" id="theme">
 
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-				<section data-markdown>
-					<textarea data-template>
+	<!-- Theme used for syntax highlighted code -->
+	<link rel="stylesheet" href="reveal.js-master/plugin/highlight/monokai.css" id="highlight-theme">
+
+</head>
+
+<body>
+	<div class="reveal">
+		<div class="slides">
+			<section data-markdown>
+				<textarea data-template>
 					  ## Week 2:
-                        GitHub | Python Basics | Data Types and Logic Control
+                        GitHub | Python Basics | Data Types and Logic Control | Strings & Loops
 					</textarea>
-				  </section>
-                <section >
-                        <h2>Git</h2>
-                        <p>Popular source code repository hosts include: GitHub, GitLab, BitBucket</p>
+			</section>
+			<section>
+				<h2>Git</h2>
+				<p>Popular source code repository hosts include: GitHub, GitLab, BitBucket</p>
 
-                        <img src="img/github-flow.png" height="400px" />
+				<img src="img/github-flow.png" height="400px" />
 
-                </section>
-                <section data-markdown>
-					<textarea data-template>
+			</section>
+			<section data-markdown>
+				<textarea data-template>
 					  ## Jupyter Notebook
 					  <div class="container">
 						<div class="col"><img src="img/jupyter-logo.png" height="300px"/></div>
@@ -42,9 +44,9 @@
 						</div>
 					  </div>
 					</textarea>
-                  </section>
-                  <section data-markdown>
-					<textarea data-template>
+			</section>
+			<section data-markdown>
+				<textarea data-template>
                       ## Data Types
                       <div class="container">
 						<div class="col">
@@ -67,12 +69,11 @@
 
                         </div>
 					</textarea>
-				  </section>
-				  <section data-markdown>
-					<textarea data-template>
+			</section>
+			<section data-markdown>
+				<textarea data-template>
 					  ## Arithmetic operators and Boolean conditionals
 					  <div class="container">
-
 						<div class="col">
 							<h3>Arithmetic Operators</h3>
                             <ul>
@@ -96,42 +97,90 @@
                                 <li><=</li>
                             </ul>
 						</div>
-						<div class="col">
-							<h3>Boolean Conditions</h3>
-							<code>
-							if condition:
-								action
-							elif:
-								action
-							else:
-								action
-							</code>
 
-
-                        </div>
 
                         </div>
 
 					</textarea>
-                  </section>
+			</section>
 
-			</div>
+			<section data-markdown>
+				<textarea data-template>
+					  ## Boolean logic
+					 ```python
+					if condition0:
+						action0
+					elif condition1:
+						action1
+					...
+					else:
+						action2
+					 ```
+					</textarea>
+			</section>
+
+			<section data-markdown>
+				<textarea data-template>
+					  ## Strings
+					 * `s.upper()`
+					 * `s.lower()`
+					 * `s.strip()`
+					 * `s.split()`
+					 * `''.join(list)`
+					 * `s.format(x)`
+					</textarea>
+			</section>
+
+			<section data-markdown>
+				<textarea data-template>
+					  ## For/while loops
+					 ```python
+					for x in iteration:
+						action
+					 ```
+
+					 ```python
+					 while condition is true:
+					 	action
+					 ```
+
+					 Nested loops: Best practice is no deeper than three nested loops
+					</textarea>
+			</section>
+
+			<section data-markdown>
+				<textarea data-template>
+					  ## List and Dictionary Comprehension
+					 ```python
+					l = [0, 1, 2, 3, 4]
+					[x for x in l]
+					 ```
+
+					 ```python
+					 d = {'a': 0, 'b': 1, 'c':2}
+					 {k:v*2 for k, v in d.items()}
+					 ```
+					</textarea>
+			</section>
+
 		</div>
+	</div>
 
-		<script src="reveal.js-master/dist/reveal.js"></script>
-		<script src="reveal.js-master/plugin/notes/notes.js"></script>
-		<script src="reveal.js-master/plugin/markdown/markdown.js"></script>
-		<script src="reveal.js-master/plugin/highlight/highlight.js"></script>
-		<script>
-			// More info about initialization & config:
-			// - https://revealjs.com/initialization/
-			// - https://revealjs.com/config/
-			Reveal.initialize({
-				hash: true,
+	<script src="reveal.js-master/dist/reveal.js"></script>
+	<script src="reveal.js-master/plugin/notes/notes.js"></script>
+	<script src="reveal.js-master/plugin/markdown/markdown.js"></script>
+	<script src="reveal.js-master/plugin/highlight/highlight.js"></script>
+	<script>
+		// More info about initialization & config:
+		// - https://revealjs.com/initialization/
+		// - https://revealjs.com/config/
+		Reveal.initialize({
+			hash: true,
 
-				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
-			});
-		</script>
-	</body>
+			// Learn about plugins: https://revealjs.com/plugins/
+			plugins: [RevealMarkdown, RevealHighlight, RevealNotes]
+		});
+	</script>
+</body>
+
 </html>
