Added latest lecture materials

--- a/week4.html
+++ b/week4.html
@@ -114,8 +114,18 @@
 					```python
 					assert Expression, Arguments
 					```
+					</textarea>
+			</section>
+			<section data-markdown>
+				<textarea data-template>
+					## Try and Except
 
-
+					```python
+					try:
+						action
+					except error_name:
+						action
+					```
 					</textarea>
 			</section>
 
